src/objects/University__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <page>kb_University_Internal_kav</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>kb_University_kav</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Additional_Resources__c</fullName>
        <label>Additional Resources</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Forum_Link__c</fullName>
        <label>Forum Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nav_Title__c</fullName>
        <label>Nav Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Video_Description__c</fullName>
        <label>Next Video Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Video_Link_Text__c</fullName>
        <label>Next Video Link Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Video_Thumbnail__c</fullName>
        <label>Next Video Thumbnail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Video_URL__c</fullName>
        <label>Next Video URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Video_Description__c</fullName>
        <label>Prev Video Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prev_Video_Link_Text__c</fullName>
        <label>Prev Video Link Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Video_Thumbnail__c</fullName>
        <label>Prev Video Thumbnail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Video_URL__c</fullName>
        <label>Prev Video URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>The short description which will appear on the BCU landing page</description>
        <inlineHelpText>The short description which will appear on the BCU landing page</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <description>The title which appears on the BCU Landing Page</description>
        <inlineHelpText>The title which appears on the BCU Landing Page</inlineHelpText>
        <label>Short Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Controls the placement of this video in the order of videos on the BCU landing page</description>
        <inlineHelpText>1 will be first</inlineHelpText>
        <label>Sort Order</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thumbnail_Image_URL__c</fullName>
        <description>The URL for the thumbnail image of this video</description>
        <inlineHelpText>Upload the file to documents, then copy the src URL</inlineHelpText>
        <label>Thumbnail Image URL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transcript_Attachment__c</fullName>
        <label>Transcript Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Transcript__c</fullName>
        <label>Transcript</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Video_Duration__c</fullName>
        <description>The video length in minutes and second</description>
        <inlineHelpText>e.g. 3 min 23 sec</inlineHelpText>
        <label>Video Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <inlineHelpText>Must be the video ID in the address bar Ex: /watch?v=[id]</inlineHelpText>
        <label>Video ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>University</label>
    <pluralLabel>University</pluralLabel>
</CustomObject>